# function-calling-pydantic

./: README.md  pyproject.toml
src/: function_calling_pydantic.py
